<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="bignerdranch.socialmediahistory.TweetsActivity">
    <item
        android:id="@+id/action_prev_day"
        android:icon="@drawable/icon_prev"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title=""/>
    <item
        android:id="@+id/action_change_date"
        android:title="@string/action_change_date"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_next_day"
        android:icon="@drawable/icon_fwd"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title=""/>
    <item
        android:id="@+id/tweet"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="4"
        android:title="@string/tweet"/>
    <item
        android:id="@+id/photo_tweet"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="5"
        android:title="@string/photo_tweet"/>
    <item
        android:id="@+id/load_tweets"
        android:orderInCategory="6"
        android:title="@string/load_tweets"/>
    <item
        android:id="@+id/delete_loaded_tweets"
        android:orderInCategory="7"
        android:title="@string/delete_loaded_tweets"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="8"
        android:title="@string/logout_twitter"/>
</menu>
